# MTG_Project

./: .gitignore  Makefile  README.md  deck.py  hand.py  player.py  requirements.txt  test_deck.py  test_hand.py  test_player.py
classes/: battlefield.py  (+6 more)
mtg-project/: README.md  pyproject.toml  requirements.txt  requirements_old.txt  session_store.db
mtg-project/.viz/: stats.json
mtg-project/classes/: battlefield.py  deck.py  graveyard.py  hand.py  library.py  player.py  player_tracker.py
mtg-project/conf/: logging.yml
mtg-project/conf/base/: catalog.yml  catalog_globals.yml  parameters.yml
mtg-project/data/01_raw/: decks_log
mtg-project/docs/: about.md
mtg-project/notebooks/gmferratti/bucket_auth/: bucket_auth.ipynb
mtg-project/notebooks/gmferratti/eda-ideation/: 01.eda_mtgsdk.ipynb  02.modelo.ipynb
mtg-project/notebooks/gmferratti/pipeline/: encapsulating_scraper.ipynb  encapsulating_sim_feat_eng.ipynb
mtg-project/notebooks/gmferratti/simulation/: data_pipeline.ipynb  simulacao.csv
mtg-project/notebooks/gmferratti/simulation/deck_samples/: sample_01.txt  sample_02.txt
mtg-project/notebooks/gmferratti/testes/: testes.ipynb
mtg-project/notebooks/gmferratti/webscraper/: HareRaising_BLB.json  MTG_JSON.ipynb
mtg-project/src/classes/: battlefield.py  constants.py  deck.py  graveyard.py  hand.py  library.py  player.py  player_tracker.py
mtg-project/src/mtg_project/: __init__.py  __main__.py  config.py  pipeline_registry.py  requirements-lock.txt  requirements.txt  settings.py
mtg-project/src/mtg_project/pipelines/: __init__.py  utils.py
(+2871 files in other folders)
